# django-snacks

./: README.md  db.sqlite3  pyproject.toml
django_snacks_project/: settings.py
snacks/: urls.py  views.py
templates/: about.html  home.html
