[tool.poetry]
name = "django-snacks"
version = "0.1.0"
description = ""
authors = ["paul-leonard <paul.ryan.leonard@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.1.4"
black = "^20.8b1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
